hphp/hack/test/typecheck/immutable_binding/immutable_foreach_scope.php.exp
File "immutable_foreach_scope.php", line 8, characters 8-13:
Unbound name: number (a global constant) (Naming[2049])
